--- a/main.css
+++ b/main.css
@@ -39,6 +39,7 @@ body {
     display:flex;
     flex-flow: row nowrap;
     align-items: center;
+    justify-content: space-around;
     /*setup of containers*/
     margin: 7px;
     height: 40px;
@@ -49,23 +50,13 @@ body {
 
 /*Setup of lettering ----- How do I center the price, item, and description?*/
 .inStockPrice {
-    display: inline-block;
-    margin-left: 10px;
-    text-align: left;
+    width: 200px;
 }
 .inStockItem {
-    width: 115px;
-    display: inline-block;
-    text-align: left;
-    justify-content: left;
-    margin-right: 200px;
-    margin-left: 200px;
+    width: 200px;
 }
 .inStockDesc {
-    display: inline-block;
-    text-align: left;
-    justify-content: right;
-    margin-right: 50px;
+    width: 200px;
 }
 
 
